--- a/department_logbook.html
+++ b/department_logbook.html
@@ -1,3 +1,4 @@
+<!-- Problem Statement: Create Departmental Logbook registration form using HTML,CSS,JS and Bootstrap. -->
 <!DOCTYPE html>
 <html lang="en">
 
